[package]
name = "tablet-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
fprint = "0.1.1"

[dependencies.hidapi]
version = '1.3.2'
default-features = false
features = ["linux-static-hidraw"]
